--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ document.body.oncontextmenu = function(){
         if (dd[0] == "URLID") {
           location.href = "404";
         } else {
+          lod.style.display="none";
           var er = dd[5].substr(10,5);
           var author1 = dd[6].substr(1);
           var type1 = dd[6].substr(0,1);
